# a_bot_tester

./: .env.example  .gitignore  README.md  pyproject.toml  tester.py
scenarios/: basic_commands.yaml  settings_commands.yaml  spreads_commands.yaml
src/: __init__.py  auth.py  client.py  config.py  interactive.py  main.py  tester.py
src/a_bot_tester/: __init__.py  client.py  config.py  interactive.py  reporter.py  runner.py  scenario.py  validator.py
src/tests/: __init__.py  base.py  callbacks.py  commands.py  flows.py
src/utils/: __init__.py  logging.py  report.py
tests/: __init__.py  test_scenario.py  test_validator.py
