[project]
name = "a_bot_tester"
version = "0.1.0"
description = "Telegram bot tester using Telethon for automated testing of a_bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.35.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
